# FerrisLog-old

./: .gitignore  ;w  Cargo.toml  README.md  log.txt
snapshots/: log_2025-03-19_21-45-17.txt
src/: lib.rs
src/kvstore/: command.rs  error.rs  mod.rs
tests/: tests.rs
